[package]
name = "sqlite3builder"
version = "0.1.5"
description = "Simple SQL code generator for Sqlite3."
authors = ["perdumonocle <konstantin_1987@mail.ru>"]
license = "MIT"
edition = "2018"
keywords = ["sql", "db", "database", "sqlite3", "sqlite"]
categories = ["database", "text-processing"]
repository = "https://github.com/perdumonocle/sqlite3builder.git"
readme = "README.md"

[badges]
travis-ci = { repository = "perdumonocle/sqlite3builder" }

[dependencies]
log = "0.4"
r2d2 = "0.8.8"
r2d2-sqlite3 = "0.1.1"
serde_json = "1.0"
sqlite3 = "0.24.0"
sql-builder = "0.1"
